[package]
name = "fcm-push-listener"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Listen for push messages from Firebase Cloud Messaging (FCM)."
repository = "https://github.com/RandomEngy/fcm-push-listener"
keywords = ["push", "fcm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "net"] }
ece = "2.2.0"
base64 = "0.21.0"
serde = "1.0.152"
webpki-roots = "0.22.6"
tokio-rustls = "0.23.4"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
prost-build = "0.11.6"