[package]
name = "fcm-push-listener"
version = "4.0.1"
edition = "2021"
license = "MIT"
description = "Listen for push messages from Firebase Cloud Messaging (FCM)."
repository = "https://github.com/RandomEngy/fcm-push-listener"
keywords = ["push", "fcm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
ece = "2.3.1"
log = "0.4.22"
pin-project-lite = "0.2.14"
prost = "0.13.4"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.216"
serde_with = "3.11.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-rustls = "0.23.4"
tokio-stream = "0.1.17"
webpki-roots = "0.22.6"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
prost-build = "0.13.4"
