[package]
name = "fcm-push-listener"
version = "4.0.2"
edition = "2021"
license = "MIT"
description = "Listen for push messages from Firebase Cloud Messaging (FCM)."
repository = "https://github.com/RandomEngy/fcm-push-listener"
keywords = ["push", "fcm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
bytes = "1.10"
ece = "2.3.1"
log = "0.4"
pin-project-lite = "0.2.16"
prost = "0.13.5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
serde = "1.0"
serde_with = "3.12"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1"
webpki-roots = "0.26.8"

[dependencies.uuid]
version = "1.15"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
prost-build = "0.13.5"
